--- a/HappyTravels/app/src/main/res/values-es/strings.xml
+++ b/HappyTravels/app/src/main/res/values-es/strings.xml
@@ -6,4 +6,43 @@
     <string name="cyan">Ciánico</string>
     <string name="airport">Aeropuerto</string>
     <string name="airport_1">Aeropuerto 1</string>
+    <string name="airport_2">Aeropuerto 2</string>
+    <string name="green">Verde</string>
+    <string name="deep_orange">Naranja</string>
+    <string name="indigo">Azul Fuerte</string>
+    <string name="light_green">Verde Claro</string>
+    <string name="orange">Anaranjado</string>
+    <string name="pink">Rosado</string>
+    <string name="purple">Violeta</string>
+    <string name="red">Rojo</string>
+    <string name="airport_3">Aeropuerto 3</string>
+    <string name="open">Abierto 24 horas</string>
+    <string name="address">"Direccion del Aeropuerto 1  "</string>
+    <string name="address_2">Direccion del Aeropuerto 2</string>
+    <string name="open_2">Abiero 24 horas</string>
+    <string name="address_3">Direccion del Aeropuerto 3</string>
+    <string name="open_3">Abiero 24 horas</string>
+    <string name="address_4">Direccion del Aeropuerto 4</string>
+    <string name="open_4">Abiero 24 horas</string>
+    <string name="address_5">Direccion del Aeropuerto 5</string>
+    <string name="address_6">Direccion del Aeropuerto 6</string>
+    <string name="address_7">Direccion del Aeropuerto 7</string>
+    <string name="address_8">Direccion del Aeropuerto 8</string>
+    <string name="airport_4">Aeropuerto 4</string>
+    <string name="airport_5">Aeropuerto 5</string>
+    <string name="airport_6">Aeropuerto 6</string>
+    <string name="airport_7">Aeropuerto 7</string>
+    <string name="airport_8">Aeropuerto 8</string>
+    <string name="open_5">Abiero 24 horas</string>
+    <string name="open_6">Abiero 24 horas</string>
+    <string name="open_7">Abiero 24 horas</string>
+    <string name="open_8">Abiero 24 horas</string>
+    <string name="flights_1">Vuelos Nacionales e Internacionales</string>
+    <string name="flights">Vuelos Nacionales e Internacionales</string>
+    <string name="flights_2">Vuelos Nacionales e Internacionales</string>
+    <string name="flights_3">Vuelos Nacionales e Internacionales</string>
+    <string name="flights_5">Vuelos Nacionales e Internacionales</string>
+    <string name="flights_6">Vuelos Nacionales e Internacionales</string>
+    <string name="flights_7">Vuelos Nacionales e Internacionales</string>
+    <string name="flights_8">Vuelos Nacionales e Internacionales</string>
 </resources>
