--- a/HappyTravels/app/src/main/res/values/strings.xml
+++ b/HappyTravels/app/src/main/res/values/strings.xml
@@ -26,4 +26,74 @@
     <string name="airport">Airport</string>
     <string name="airport_1">Airport 1</string>
     <string name="airport_1_description">Airport 1 description</string>
+    <string name="airport_2">Airport 2</string>
+    <string name="airport_2_description">Airport 2 description</string>
+    <string name="airport_3">Airport 3</string>
+    <string name="airport_3_description">Airport 3 description</string>
+    <string name="open">Open 24/7</string>
+    <string name="address">Address for Airport 1</string>
+    <string name="open_2">Open 24/7</string>
+    <string name="address_2">Address for Airport 2</string>
+    <string name="open_3">Open 24/7</string>
+    <string name="address_3">Address for Airport 3</string>
+    <string name="airport_4">Airport 4</string>
+    <string name="airport_4_description">Airport 4 description</string>
+    <string name="open_4">Open 24/7</string>
+    <string name="address_4">Address for Airport 4</string>
+    <string name="airport_5">Airport 5</string>
+    <string name="airport_5_description">Airport 5 description</string>
+    <string name="open_5">Open 24/7</string>
+    <string name="address_5">Address for Airport 5</string>
+    <string name="airport_6">Airport 6</string>
+    <string name="airport_6_description">Airport 6 description</string>
+    <string name="open_6">Open 24/7</string>
+    <string name="address_6">Address for Airport 6</string>
+    <string name="airport_7">Airport 7</string>
+    <string name="airport_7_description">Airport 7 description</string>
+    <string name="open_7">Open 24/7</string>
+    <string name="address_7">Address for Airport 7</string>
+    <string name="airport_8">Airport 8</string>
+    <string name="airport_8_description">Airport 8 description</string>
+    <string name="open_8">Open 24/7</string>
+    <string name="address_8">Address for Airport 8</string>
+    <string name="flights_1">International and domestic flights.</string>
+    <string name="flights_2">International and domestic flights.</string>
+    <string name="flights_3">International and domestic flights.</string>
+    <string name="flights">International and domestic flights.</string>
+    <string name="flights_5">International and domestic flights.</string>
+    <string name="flights_6">International and domestic flights.</string>
+    <string name="flights_7">International and domestic flights.</string>
+    <string name="flights_8">International and domestic flights.</string>
+    <string name="hotel_1">Hotel 1</string>
+    <string name="hotel_1_description">Hotel 1 description</string>
+    <string name="hotel_1_open">Open 24/7</string>
+    <string name="hotel_1_address">Address for Hotel 1</string>
+    <string name="hotel_2">Hotel 2</string>
+    <string name="hotel_2_description">Hotel 2 description</string>
+    <string name="hotel_2_open">Open 24/7</string>
+    <string name="hotel_2_address">Address for Hotel 2</string>
+    <string name="hotel_3">Hotel 3</string>
+    <string name="hotel_3_description">Hotel 3 description</string>
+    <string name="hotel_3_open">Open 24/7</string>
+    <string name="hotel_3_address">Address for Hotel 3</string>
+    <string name="hotel_4">Hotel 4</string>
+    <string name="hotel_4_description">Hotel 4 description</string>
+    <string name="hotel_4_open">Open 24/7</string>
+    <string name="hotel_4_address">Address for Hotel 4</string>
+    <string name="hotel_5">Hotel 5</string>
+    <string name="hotel_5_description">Hotel 5 description</string>
+    <string name="hotel_5_open">Open 24/7</string>
+    <string name="hotel_5_address">Address for Hotel 5</string>
+    <string name="hotel_6">Hotel 6</string>
+    <string name="hotel_6_description">Hotel 6 description</string>
+    <string name="hotel_6_open">Open 24/7</string>
+    <string name="hotel_6_address">Address for Hotel 6</string>
+    <string name="hotel_7">Hotel 7</string>
+    <string name="hotel_7_description">Hotel 7 description</string>
+    <string name="hotel_7_open">Open 24/7</string>
+    <string name="hotel_7_address">Address for Hotel 7</string>
+    <string name="hotel_8">Hotel 8</string>
+    <string name="hotel_8_description">Hotel 8 description</string>
+    <string name="hotel_8_open">Open 24/7</string>
+    <string name="hotel_8_address">Address for Hotel 8</string>
 </resources>
