The strings values for Nightclub is added

--- a/HappyTravels/app/src/main/res/values-es/strings.xml
+++ b/HappyTravels/app/src/main/res/values-es/strings.xml
@@ -17,17 +17,17 @@
     <string name="red">Rojo</string>
     <string name="airport_3">Aeropuerto 3</string>
     <string name="open">Abierto 24 horas</string>
-    <string name="address">"Direccion del Aeropuerto 1  "</string>
-    <string name="address_2">Direccion del Aeropuerto 2</string>
+    <string name="address">\"Dirección del Aeropuerto 1  \"</string>
+    <string name="address_2">Dirección del Aeropuerto 2</string>
     <string name="open_2">Abiero 24 horas</string>
-    <string name="address_3">Direccion del Aeropuerto 3</string>
+    <string name="address_3">Dirección del Aeropuerto 3</string>
     <string name="open_3">Abiero 24 horas</string>
-    <string name="address_4">Direccion del Aeropuerto 4</string>
+    <string name="address_4">Dirección del Aeropuerto 4</string>
     <string name="open_4">Abiero 24 horas</string>
-    <string name="address_5">Direccion del Aeropuerto 5</string>
-    <string name="address_6">Direccion del Aeropuerto 6</string>
-    <string name="address_7">Direccion del Aeropuerto 7</string>
-    <string name="address_8">Direccion del Aeropuerto 8</string>
+    <string name="address_5">Dirección del Aeropuerto 5</string>
+    <string name="address_6">Dirección del Aeropuerto 6</string>
+    <string name="address_7">Dirección del Aeropuerto 7</string>
+    <string name="address_8">Dirección del Aeropuerto 8</string>
     <string name="airport_4">Aeropuerto 4</string>
     <string name="airport_5">Aeropuerto 5</string>
     <string name="airport_6">Aeropuerto 6</string>
@@ -45,4 +45,51 @@
     <string name="flights_6">Vuelos Nacionales e Internacionales</string>
     <string name="flights_7">Vuelos Nacionales e Internacionales</string>
     <string name="flights_8">Vuelos Nacionales e Internacionales</string>
+    <string name="hotel_1">Hotel 1</string>
+    <string name="hotel_1_address">Dirección del Hotel 1</string>
+    <string name="hotel_1_open">Abierto 24 horas</string>
+    <string name="hotel_2">Hotel 2</string>
+    <string name="hotel_2_address">Dirección del Hotel 2</string>
+    <string name="hotel_2_open">Abierto 24 horas</string>
+    <string name="hotel_3">Hotel 3</string>
+    <string name="hotel_3_address">Dirección del Hotel 3</string>
+    <string name="hotel_3_open">Abierto 24 horas</string>
+    <string name="hotel_4">Hotel 4</string>
+    <string name="hotel_4_address">Dirección del Hotel 4</string>
+    <string name="hotel_4_open">Abierto 24 horas</string>
+    <string name="hotel_5">Hotel 5</string>
+    <string name="hotel_5_address">Dirección del Hotel 5</string>
+    <string name="hotel_5_open">Abierto 24 horas</string>
+    <string name="hotel_6">Hotel 6</string>
+    <string name="hotel_6_address">Dirección del Hotel 6</string>
+    <string name="hotel_6_open">Abierto 24 horas</string>
+    <string name="hotel_7">Hotel 7</string>
+    <string name="hotel_7_address">Dirección del Hotel 7</string>
+    <string name="hotel_7_open">Abierto 24 horas</string>
+    <string name="hotel_8">Hotel 8</string>
+    <string name="hotel_8_address">Dirección del Hotel 8</string>
+    <string name="hotel_8_open">Abierto 24 horas</string>
+    <string name="nightclub_1">Discoteca 1</string>
+    <string name="nightclub_1_address">Dirección de la Discoteca 1</string>
+    <string name="nightclub_1_open">Abierto 24 horas</string>
+    <string name="nightclub_2">Discoteca 2</string>
+    <string name="nightclub_2_address">Dirección de la Discoteca 2</string>
+    <string name="nightclub_2_open">Abierto 24 horas</string>
+    <string name="nightclub_3">Discoteca 3</string>
+    <string name="nightclub_3_address">Dirección de la Discoteca 3</string>
+    <string name="nightclub_3_open">Abierto 24 horas</string>
+    <string name="nightclub_4">Discoteca 4</string>
+    <string name="nightclub_4_address">Dirección de la Discoteca 4</string>
+    <string name="nightclub_4_open">Abierto 24 horas</string>
+    <string name="nightclub_5">Discoteca 5</string>
+    <string name="nightclub_5_address">Dirección de la Discoteca 5</string>
+    <string name="nightclub_5_open">Abierto 24 horas</string>
+    <string name="nightclub_6">Discoteca 6</string>
+    <string name="nightclub_6_address">Dirección de la Discoteca 6</string>
+    <string name="nightclub_6_open">Abierto 24 horas</string>
+    <string name="nightclub_7">Discoteca 7</string>
+    <string name="nightclub_7_address">Dirección de la Discoteca 7</string>
+    <string name="nightclub_7_open">Abierto 24 horas</string>
+    <string name="nightclub_8">Discoteca 8</string>
+    <string name="nightclub_8_address">Dirección de la Discoteca 8</string>
 </resources>
