--- a/HappyTravels/app/src/main/res/values/strings.xml
+++ b/HappyTravels/app/src/main/res/values/strings.xml
@@ -96,4 +96,36 @@
     <string name="hotel_8_description">Hotel 8 description</string>
     <string name="hotel_8_open">Open 24/7</string>
     <string name="hotel_8_address">Address for Hotel 8</string>
+    <string name="nightclub_1">Nightclub 1</string>
+    <string name="nightclub_1_description">Nightclub 1 description</string>
+    <string name="nightclub_1_open">Open 24/7</string>
+    <string name="nightclub_1_address">Address for Nightclub 1</string>
+    <string name="nightclub_2">Nightclub 2</string>
+    <string name="nightclub_2_description">Nightclub 2 description</string>
+    <string name="nightclub_2_open">Open 24/7</string>
+    <string name="nightclub_2_address">Address for Nightclub 2</string>
+    <string name="nightclub_3">Nightclub 3</string>
+    <string name="nightclub_3_description">Nightclub 3 description</string>
+    <string name="nightclub_3_open">Open 24/7</string>
+    <string name="nightclub_3_address">Address for Nightclub 3</string>
+    <string name="nightclub_4">Nightclub 4</string>
+    <string name="nightclub_4_description">Nightclub 4 description</string>
+    <string name="nightclub_4_open">Open 24/7</string>
+    <string name="nightclub_4_address">Address for Nightclub 4</string>
+    <string name="nightclub_5">Nightclub 5</string>
+    <string name="nightclub_5_description">Nightclub 5 description</string>
+    <string name="nightclub_5_open">Open 24/7</string>
+    <string name="nightclub_5_address">Address for Nightclub 5</string>
+    <string name="nightclub_6">Nightclub 6</string>
+    <string name="nightclub_6_description">Nightclub 6 description</string>
+    <string name="nightclub_6_open">Open 24/7</string>
+    <string name="nightclub_6_address">Address for Nightclub 6</string>
+    <string name="nightclub_7">Nightclub 7</string>
+    <string name="nightclub_7_description">Nightclub 7 description</string>
+    <string name="nightclub_7_open">Open 24/7</string>
+    <string name="nightclub_7_address">Address for Nightclub 7</string>
+    <string name="nightclub_8">Nightclub 8</string>
+    <string name="nightclub_8_description">Nightclub 8 description</string>
+    <string name="nightclub_8_open">Open 24/7</string>
+    <string name="nightclub_8_address">Address for Nightclub 8</string>
 </resources>
