All strings resources are added

--- a/HappyTravels/app/src/main/res/values/strings.xml
+++ b/HappyTravels/app/src/main/res/values/strings.xml
@@ -128,4 +128,189 @@
     <string name="nightclub_8_description">Nightclub 8 description</string>
     <string name="nightclub_8_open">Open 24/7</string>
     <string name="nightclub_8_address">Address for Nightclub 8</string>
+    <string name="other_1">Other Place 1</string>
+    <string name="other_1_description">Other Place 1 description</string>
+    <string name="other_1_open">Open 24/7</string>
+    <string name="other_1_address">Address for Other Place 1</string>
+    <string name="other_2">Other Place 2</string>
+    <string name="other_2_description">Other Place 2 description</string>
+    <string name="other_2_open">Open 24/7</string>
+    <string name="other_2_address">Address for Other Place 2</string>
+    <string name="other_3">Other Place 3</string>
+    <string name="other_3_description">Other Place 3 description</string>
+    <string name="other_3_open">Open 24/7</string>
+    <string name="other_3_address">Address for Other Place 3</string>
+    <string name="other_4">Other Place 4</string>
+    <string name="other_4_open">Other Place 4 description</string>
+    <string name="open_4_description">Open 24/7</string>
+    <string name="other_4_address">Address for Other Place 4</string>
+    <string name="other_5">Beach 1</string>
+    <string name="other_5_description">Beach 5 description</string>
+    <string name="other_5_open">Open 24/7</string>
+    <string name="other_5_address">Address for Beach 1</string>
+    <string name="other_6">Beach 2</string>
+    <string name="other_6_description">Beach 6 description</string>
+    <string name="other_6_open">Open 24/7</string>
+    <string name="other_6_address">Address for Beach 2</string>
+    <string name="other_7">Beach 3</string>
+    <string name="other_7_description">Beach 7 description</string>
+    <string name="other_7_open">Open 24/7</string>
+    <string name="other_7_address">Address for Beach 3</string>
+    <string name="other_8">Beach 4</string>
+    <string name="other_8_description">Beach 8 description</string>
+    <string name="other_8_open">Open 24/7</string>
+    <string name="other_8_address">Address for Beach 4</string>
+    <string name="restaurant_1">Restaurant 1</string>
+    <string name="restaurant_1_description">Restaurant 1 description</string>
+    <string name="restaurant_1_open">Open 24/7</string>
+    <string name="restaurant_1_address">Address for Restaurant 1</string>
+    <string name="restaurant1">Restaurant</string>
+    <string name="mexican_1">Mexican, Asian, Seafood</string>
+    <string name="fish_1">Fish, Sushi, BBQ, Rice</string>
+    <string name="cuisine_1_details">Cuisine details</string>
+    <string name="reservation_1">Call or email for reservations.</string>
+    <string name="restaurant_2">Restaurant 2</string>
+    <string name="restaurant_2_description">Restaurant 1 description</string>
+    <string name="restaurant_2_open">Open 24/7</string>
+    <string name="restaurant_2_address">Address for Restaurant 2</string>
+    <string name="restaurant2">Restaurant</string>
+    <string name="restaurant_2_mexican">Mexican, Asian, Seafood</string>
+    <string name="fish_2">Fish, Sushi, BBQ, Rice</string>
+    <string name="cuisine_2_details">Cuisine details</string>
+    <string name="reservation_2">Call or email for reservations.</string>
+    <string name="restaurant_3">Restaurant 3</string>
+    <string name="restaurant_3_description">Restaurant 1 description</string>
+    <string name="restaurant_3_open">Open 24/7</string>
+    <string name="restaurant_3_address">Address for Restaurant 3</string>
+    <string name="restaurant3">Restaurant</string>
+    <string name="mexican_3">Mexican, Asian, Seafood</string>
+    <string name="fish_3">Fish, Sushi, BBQ, Rice</string>
+    <string name="cuisine_3_details">Cuisine details</string>
+    <string name="reservation_3">Call or email for reservations.</string>
+    <string name="restaurant_4">Restaurant 4</string>
+    <string name="restaurant_4_description">Restaurant 1 description</string>
+    <string name="restaurant_4_open">Open 24/7</string>
+    <string name="restaurant_4_address">Address for Restaurant 4</string>
+    <string name="restaurant4">Restaurant</string>
+    <string name="mexican_4">Mexican, Asian, Seafood</string>
+    <string name="fish_4">Fish, Sushi, BBQ, Rice</string>
+    <string name="cuisine_4_details">Cuisine details</string>
+    <string name="reservation_4">Call or email for reservations.</string>
+    <string name="restaurant_5">Restaurant 5</string>
+    <string name="restaurant">Restaurant 1 description</string>
+    <string name="restaurant_5_open">Open 24/7</string>
+    <string name="restaurant_5_address">Address for Restaurant 5</string>
+    <string name="restaurant5">Restaurant</string>
+    <string name="mexican_5">Mexican, Asian, Seafood</string>
+    <string name="fish_5">Fish, Sushi, BBQ, Rice</string>
+    <string name="cuisine_5_details">Cuisine details</string>
+    <string name="reservation_5">Call or email for reservations.</string>
+    <string name="restaurant_6">Restaurant 6</string>
+    <string name="restaurant_6_description">Restaurant 1 description</string>
+    <string name="restaurant_6_open">Open 24/7</string>
+    <string name="restaurant_6_address">Address for Restaurant 6</string>
+    <string name="restaurant6">Restaurant</string>
+    <string name="mexican_6">Mexican, Asian, Seafood</string>
+    <string name="fish_6">Fish, Sushi, BBQ, Rice</string>
+    <string name="cuisne_6_details">Cuisine details</string>
+    <string name="reservation_6">Call or email for reservations.</string>
+    <string name="restaurant_7">Restaurant 7</string>
+    <string name="restaurant_7_description">Restaurant 1 description</string>
+    <string name="restaurant_7_open">Open 24/7</string>
+    <string name="restaurant_7_address">Address for Restaurant 7</string>
+    <string name="restaurant7">Restaurant</string>
+    <string name="mexican7">Mexican, Asian, Seafood</string>
+    <string name="fish_7">Fish, Sushi, BBQ, Rice</string>
+    <string name="cuisine_7_details">Cuisine details</string>
+    <string name="reservation_7">Call or email for reservations.</string>
+    <string name="restaurant_8">Restaurant 8</string>
+    <string name="restaurant_8_description">Restaurant 1 description</string>
+    <string name="restaurant_8_open">Open 24/7</string>
+    <string name="restaurant_8_address">Address for Restaurant 8</string>
+    <string name="restaurant8">Restaurant</string>
+    <string name="mexican_8">Mexican, Asian, Seafood</string>
+    <string name="fish_8">Fish, Sushi, BBQ, Rice</string>
+    <string name="cuisine_8_details">Cuisine details</string>
+    <string name="reservation_8">Call or email for reservations.</string>
+    <string name="taxi_1">Taxi</string>
+    <string name="taxi_1_availability">The taxi is available - details</string>
+    <string name="taxi_1_price">The price are 20 per km.</string>
+    <string name="transport_1">Transportation</string>
+    <string name="bus_1">Public Bus</string>
+    <string name="bus_1_availability">The Bus is available - details</string>
+    <string name="bus_1_price">The price are 20 per km.</string>
+    <string name="transport_2">Transportation</string>
+    <string name="train_1">Train</string>
+    <string name="train_1_availability">The Train is available - details</string>
+    <string name="train_1_price">The price are 20 per km.</string>
+    <string name="transport_3">Transportation</string>
+    <string name="train_2">Train</string>
+    <string name="train_2_availability">The Train is available - details</string>
+    <string name="train_2_price">The price are 20 per km.</string>
+    <string name="transport_4">Transportation</string>
+    <string name="bus_2">Public Bus</string>
+    <string name="bus_2_availability">The Public Bus is available - details</string>
+    <string name="bus_2_price">The price are 20 per km.</string>
+    <string name="transport_5">Transportation</string>
+    <string name="bus_3">Bus</string>
+    <string name="bus_3_availability">The Bus is available - details</string>
+    <string name="bus_3_price">The price are 20 per km.</string>
+    <string name="transport_6">Transportation</string>
+    <string name="bikes_1">Bikes</string>
+    <string name="bike_1_availability">The Bikes is available - details</string>
+    <string name="bike_1_price">The price are 20 per km.</string>
+    <string name="transport_7">Transportation</string>
+    <string name="bus_4">Bus</string>
+    <string name="bus_4_availability">The Bus is available - details</string>
+    <string name="bus_4_price">The price are 20 per km.</string>
+    <string name="transport_8">Transportation</string>
+    <string name="emergency_1">Emergency 1</string>
+    <string name="police_1">Police</string>
+    <string name="emergency1">Emergency</string>
+    <string name="emergency_2">Emergency 2</string>
+    <string name="fire_department_1">Fire Department</string>
+    <string name="emergency2">Emergency</string>
+    <string name="emergency_3">Emergency 3</string>
+    <string name="emergency_4">Emergency 4</string>
+    <string name="emergency_6">Emergency 5</string>
+    <string name="emergency_7">Emergency 6</string>
+    <string name="hospital_A">Hospital A</string>
+    <string name="hospital_B">Hospital B</string>
+    <string name="ambulance_A">Ambulance A</string>
+    <string name="ambulance_B">Ambulance B</string>
+    <string name="emergency3">Emergency</string>
+    <string name="emergency4">Emergency</string>
+    <string name="emergency5">Emergency</string>
+    <string name="emergency6">Emergency</string>
+    <string name="hotel1">Hotel</string>
+    <string name="hotel2">Hotel</string>
+    <string name="hotel3">Hotel</string>
+    <string name="hotel4">Hotel</string>
+    <string name="hotel5">Hotel</string>
+    <string name="hotel6">Hotel</string>
+    <string name="hotel7">Hotel</string>
+    <string name="hotel8">Hotel</string>
+    <string name="Nightclub1">Nightclub</string>
+    <string name="Nightclub2">Nightclub</string>
+    <string name="Nightclub3">Nightclub</string>
+    <string name="Nightclub4">Nightclub</string>
+    <string name="Nightclub5">Nightclub</string>
+    <string name="Nightclub6">Nightclub</string>
+    <string name="Nightclub7">Nightclub</string>
+    <string name="Nightclub8">Nightclub</string>
+    <string name="Beach1">Beach</string>
+    <string name="Beach2">Beach</string>
+    <string name="Beach3">Beach</string>
+    <string name="Beach4">Beach</string>
+    <string name="Beach5">Beach</string>
+    <string name="Beach6">Beach</string>
+    <string name="Beach7">Beach</string>
+    <string name="Beach8">Beach</string>
+    <string name="Airport2">Airport</string>
+    <string name="Airport3">Airport</string>
+    <string name="Airport4">Airport</string>
+    <string name="Airport5">Airport</string>
+    <string name="Airport6">Airport</string>
+    <string name="Airport7">Airport</string>
+    <string name="Airport8">Airport</string>
 </resources>
