18 The navigation drawer item contents are externalized to string.xml

--- a/HappyTravels/app/src/main/res/values-es/strings.xml
+++ b/HappyTravels/app/src/main/res/values-es/strings.xml
@@ -179,4 +179,5 @@
     <string name="reservation">Llame o envíe un correo electrónica para reservar</string>
 
     <string name="open">Abiero 24 horas</string>
+    <string name="share">Compartir</string>
 </resources>
